copywrite spacing fix

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -480,7 +480,7 @@
 
   @media (max-width: 375px) {
    #navBar{
-    position:relative
+    position:relative;
    }
    .realEst{
     height: 46.05px;
@@ -660,12 +660,13 @@
     padding: 29px;
    }
   
- .copywrite > p{
+ .copywrite >  p{
   margin-left: 20%;
   margin-right: 20%;
   line-height: 22px;
-
-   
- }
-
+  text-align: center;
+}
+.copywrite {
+    padding-bottom: 25px;
+}
   }
